--- a/app/views/customers/customers/index.html.erb
+++ b/app/views/customers/customers/index.html.erb
@@ -14,16 +14,19 @@
                 <% @customers.each do |customer| %>
                     <div class="col-8 p-4 mt-5 border rounded shadow bg-light">
                                  
-                        <div class="col d-flex">
+                        <div class="col-12 d-flex">
+                            
                             <!--プロフィール画像-->
-                            <div class="pr-4"><%= render "customers/shared/image_attached", post: customer %></div>
-                            <p class="pr-4"><%= link_to customer.name,customer_path(customer.id) %></p>
-                            <!--フォローボタン-->
-                            <div class="pl-5"><%= render "customers/relationships/follow" , customer: customer %> </div>
+                            <div><%= render "customers/shared/image_attached", post: customer %></div>
+                            <p class="col-4 offset-md-1"><%= link_to customer.name,customer_path(customer.id) %></p>
                             
                             <% if current_customer.id == customer.id %>
-                                <div class="pl-5 ml-3"><i class="fas fa-user-check fa-3x"></i></div>
+                                <div class="col-6 offset-md-1"><i class="fas fa-user-check fa-3x"></i></div>
+                            <% else %>
+                            <!--フォローボタン-->
+                            <div class="col-6 offset-md-1"><%= render "customers/relationships/follow" , customer: customer %> </div>
                             <% end %>
+
                             
                         </div>
                         
