--- a/app/views/customers/favorites/destroy.js.erb
+++ b/app/views/customers/favorites/destroy.js.erb
@@ -1,1 +1,1 @@
-$("#favorite_buttons_<%= @favorite.id %>").html("<%= j (render 'customers/favorites/favorite', post: @post) %>");
+$("#favorite_hart_buttons_<%= @post.id %>").html("<%= j (render 'customers/favorites/favorite', post: @post) %>");
