--- a/app/views/customers/post_comments/destroy.js.erb
+++ b/app/views/customers/post_comments/destroy.js.erb
@@ -1,1 +1,1 @@
-$("#favorite_buttons_<%= @post.id %>").html("<%= j (render 'customers/post_comments/post_comment', post: @post) %>");
+$("#comment_list_").html("<%= j (render 'customers/post_comments/comments_index') %>");
