--- a/app/views/customers/posts/index.html.erb
+++ b/app/views/customers/posts/index.html.erb
@@ -12,36 +12,12 @@
             </div>
             
             <div class="col-md-8 offset-md-1">
-                <% @posts.each do |post| %>
-                <div class="col-8 p-4 mt-5 border rounded shadow bg-light">
-                    
-                    <div class="col-auto d-flex">
-                        <!--プロフィール画像-->
-                        <div class="col ml-2"><%= render "customers/shared/image_attached", post: post %></div>
-
-                        <!--フォローボタン-->
-                        <div class="col pt-1 ml-5"><%= render "customers/relationships/follow",customer: post.customer %></div>
-                    </div>
-                    
-                        <div class="pl-5"><%= link_to post.customer.name ,customer_path(post.customer.id)%></div>
-                        <!--タグ-->
-                        <div class="p-2"><%= render 'customers/posts/tag_list', tag_list: post.tag_list %></div>
-                        
-                        <div>
-                            <% if post.post_image.attached? %>
-                                <%= image_tag post.post_image.variant(resize:'150x150')  %>
-                            <% end %>
-                        </div>
-                    
-                        <div class="col p-4 "><%= post.content %></div>
-                    <div class="col-12 d-flex bd-highlight pt-5">
-                          <div class="col-4 mr-4 bd-highlight"><%= l post.created_at,format: :short%></div>
-                          <div class="ml-3 bd-highlight">いいね: <%= post.favorites.count %></div>
-                          <div class=" ml-3 mr-1 bd-highlight">コメント:<%= post.post_comments.count %></div>
-                          <div><%= link_to "詳細",post_path(post.id)%></div>
-                    </div>
+                
+                <!---- 投稿一覧 ------->
+                <div id="index_">
+                <%= render "customers/posts/index" %>
                 </div>
-                <% end %>
+                
             </div>
         </div>
     </div>
