--- a/app/views/customers/relationships/followers.html.erb
+++ b/app/views/customers/relationships/followers.html.erb
@@ -1,25 +1,32 @@
-<h2>Follower Customer</h2>
 <% if @customers.exists? %>
-<table class='table'>
-  <thead>
-    <tr>
-      <th>image</th>
-      <th>name</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-  <tbody>
- <% @customers.each do |customer| %>
-      <tr>
-        <td><%= render "customers/shared/image_attached", post: customer  %></td>
-        <td><%= customer.name %></td>
-        <td>フォロー数:<%= customer.followings.count %></td>
-        <td>フォロワー数:<%= customer.followers.count %></td>
-        <td><%= link_to 'Show', customer_path(current_customer) %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-<% else %>
-  <p>ユーザーはいません</p>
+<div class="container">
+  <div class="row">
+    <div class="col-md-8 border bg-light shadow offset-md-2 mt-4">
+      <h1 class="display-6 text-danger">Followers</h1>
+      <table class='table'>
+        <thead>
+          <tr>
+            <th>プロフィール画像</th>
+            <th>名前</th>
+            <th>フォロー数</th>
+            <th>フォロワー数</th>
+          </tr>
+        </thead>
+        <% @customers.each do |customer| %>
+        <tbody>
+            <tr>
+              <td><%= render "customers/shared/image_attached", post: customer  %></td>
+              <td><%= customer.name %></td>
+              <td><i class="fas fa-user fa-2x pr-3 pl-3"></i><%= link_to customer.followings.count,  customer_followings_path(customer) %></td>
+              <td><i class="fas fa-users fa-2x pr-3 pl-3"></i><%= link_to customer.followers.count ,  customer_followers_path(customer)%></td>
+              <td><%= link_to '詳細', customer_path(customer.id) %></td>
+            </tr>
+        </tbody>
+        <% end %>
+      </table>
+      <% else %>
+      <p>ユーザーはいません</p>
+    </div>
+  </div>
+</div>
 <% end %>
