--- a/app/views/customers/searches/_search.html.erb
+++ b/app/views/customers/searches/_search.html.erb
@@ -1,10 +1,24 @@
 <% if customer_signed_in? %>
-  <div class="search_form">
-    <%= form_with url: search_path, local: true, method: :get do |f| %>
-      <%= f.text_field :word %>
-      <%= f.select :range, options_for_select([['Customer'], ['Post']]) %>
-      <%= f.select :search, options_for_select([["完全一致","perfect_match"], ["前方一致","forward_match"],  ["後方一致","backword_match"], ["部分一致","partial_match"]]) %>
-      <%= f.submit "検索", class: "btn btn-info" %>
-    <% end %>
-  </div>
+ 
+    <input type="button" value="検索する" onclick="modalOpen()" class="button-search" >
+    
+    <div id="modalArea" class="modalNoDisp">
+      <div class="modalWindow"> <!-- ウインドウ -->
+        <p>検索する</p>
+        <form action="/search" accept-charset="UTF-8" method="get"><input name="utf8" type="hidden" value="✓">
+        <div class="pt-2 pb-2 ">
+          <select class="form-select" name="range">
+            <option selected="">選択する</option>
+            <option value="Customer">トレーニーを探す</option>
+            <option value="Post">投稿を探す</option>
+          </select>
+        </div>
+        <div class="pt-2 pb-2 pl-5"><input class="form-control" type="text" name="word" placeholder="検索ワードを入力" style="width:80%"></div>
+        <div class="pt-2 pb-4"><input type="submit" value"送信する"="" name="commit" class="button-search"></div>
+    </form>
+    <div clas="p-3"><input type="button" value="閉じる" onclick="modalClose()" style="width:30%"></div>
+      </div>
+    </div>
+    
+
 <% end %>
