--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,15 +8,16 @@
             <ul class="navbar-nav">
             <% if customer_signed_in? %>
                 
-                <li><%= link_to customers_path, class:"nav-link  active btn-block" do %>
+                
+                <li class="ml-4 mr-4"><%= link_to customers_path, class:"nav-link  active btn-block" do %>
                     <i class="fas fa-users"> トレーニー</i>
                 <% end %></li>
                 
-                <li><%= link_to posts_path, class:"nav-link  active btn-block" do %>
+                <li class="mr-4"><%= link_to posts_path, class:"nav-link  active btn-block" do %>
                     <i class="fas fa-clone"> 投稿</i>
                 <% end %></li>
                 
-                <li><%= link_to destroy_customer_session_path, method: :delete , class:"nav-link  active btn-block" do %>
+                <li class="mr-4"><%= link_to destroy_customer_session_path, method: :delete , class:"nav-link  active btn-block" do %>
                     <i class="fas fa-sign-out-alt"> ログアウトする</i>
                 <% end %></li>
                 
@@ -36,7 +37,6 @@
                     <i class="fas fa-sign-out-alt"> ログアウトする</i>
                 <% end %></li>
                 
-                <li><%= render "customers/searches/search"%></li>
             
             <% else %>
             
