--- a/app/views/customers/customers/index.html.erb
+++ b/app/views/customers/customers/index.html.erb
@@ -30,10 +30,7 @@
                             
                         </div>
                         
-                        <div class="col mt-4">
-                        
-                        <div><%= customer.introduction %></div>
-                        </div>
+                        <div class="p-3 text-break"><%= customer.introduction %></div>
                     </div>
                 <% end %>
             </div>
