--- a/app/views/customers/posts/_form.html.erb
+++ b/app/views/customers/posts/_form.html.erb
@@ -1,7 +1,7 @@
     <%= form_with model:post , data: {remote: true} do  |f| %>
 
         <div class="field">
-            <p>タグ(,でタグを区切れます)</p>
+            <p>タグ( ,で区切ると複数できます)</p>
             <%= f.text_field :tag_list, class: 'form-control',value: post.tag_list.join(',') %>
 　　    </div>
 　　    
