--- a/app/views/customers/posts/_index.html.erb
+++ b/app/views/customers/posts/_index.html.erb
@@ -1,12 +1,16 @@
                 <% @posts.each do |post| %>
                 <div class="col-8 pt-4 pb-4 mt-5 border rounded shadow bg-light">
                     
-                    <div class="col-auto d-flex">
+                    <div class="col-12 d-flex">
                         <!--プロフィール画像-->
-                        <div class="col-2"><%= render "customers/shared/image_attached", post: post %></div>
-
+                        <div class="col-2 "><%= render "customers/shared/image_attached", post: post %></div>
+                        
                         <!--フォローボタン-->
-                        <div id="follow_<%= post.customer_id %>" class="col-5 offset-md-5"><%= render "customers/relationships/follow",customer: post.customer %></div>
+                        <% if current_customer.id == post.customer.id %>
+                            <div class="col-2 offset-md-4"><i class="fas fa-user-check fa-3x"></i></div>
+                        <% else %>
+                            <div id="follow_<%= post.customer_id %>" class="col-5 offset-md-2"><%= render "customers/relationships/follow",customer: post.customer %></div>
+                        <% end %>
                     </div>
                     
                         <div class="col-5 pl-4"><%= link_to post.customer.name ,customer_path(post.customer.id)%></div>
@@ -24,12 +28,13 @@
                         <div class="col-12 text-break mt-3"><%= post.content %></div>
                         
                     <div class="col-12 d-flex bd-highlight pt-5">
-                          <div class="col-4 mr-4 bd-highlight"><%= l post.created_at,format: :short%></div>
+                          
                           <div class="ml-3 bd-highlight">いいね: <%= post.favorites.count %></div>
                           <div class=" ml-3 mr-1 bd-highlight">コメント:<%= post.post_comments.count %></div><!--コメント数-->
                           <div><%= link_to "詳細",post_path(post.id)%></div>
+                          <!----削除ボタン------>
                           <% if current_customer.id == post.customer.id %>
-                              <div><%= link_to "削除",post_path(post.id) ,method: :delete,remote: true %></div>
+                              <div><%= link_to "削除",post_path(post.id) ,class:"btn btn-danger" ,method: :delete,remote: true %></div>
                           <% end %>
                     </div>
                 </div>
