--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,12 +15,21 @@
  */
 @import "bootstrap";
 
+html {
+  height: auto;
+}
 body{
+    width: 100%;
+    height: 100%;
     background  : linear-gradient(154deg, #f8f4e6, #ffffff, #f8f4e6);
+  
 }
 
 .card {
   margin: 0 auto 60px;
   max-width: 376px;
   height: 370px;
+}
+.like{
+  color:#df5656;
 }
