--- a/app/views/customers/favorites/_favorite.html.erb
+++ b/app/views/customers/favorites/_favorite.html.erb
@@ -1,10 +1,10 @@
     <% if current_customer.favorited?(post) %>
             <%= link_to post_favorites_path(post), method: :delete, remote: true do %>
-                <i class="fas fa-heart"></i>
+                <i class="fas fa-heart fa-2x like"></i>
             <% end %>
         <% else %>
             <%= link_to post_favorites_path(post), method: :post, remote: true do %>
-                 <i class="far fa-heart"></i>
+                 <i class="far fa-heart fa-2x like"></i>
             <% end %>
     <% end %>
     <%= post.favorites.count %>
