--- a/app/views/customers/homes/top.html.erb
+++ b/app/views/customers/homes/top.html.erb
@@ -1,10 +1,14 @@
 
 <main class="main">
-    <div class="text-center w-100">
-        <div class="top-btn col-md-6 p-lg-5 mx-auto">
-          <h1 class="display-6 fw-normal"><strong>FitnessBooster</strong>へようこそ</h1>
-          <p class="lead fw-normal">トレーニングを共有しよう</p>
-          <%= link_to "今すぐ始める", new_customer_session_path,class:"btn btn-danger" %>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12 text-center pt-5 mt-5">
+                <div class="top-btn col-md-6 p-lg-5 mx-auto">
+                  <p class="display-4 fw-normal"><strong>FitnessBooster</strong></p>
+                  <p class="lead fw-normal"><span class="blink">トレーニングを共有しよう!!</span></p>
+                  <%= link_to "今すぐ始める", new_customer_session_path,class:"btn btn-danger" %>
+                </div>
+            </div>
         </div>
     </div>
 </main>
