--- a/app/views/customers/posts/_index.html.erb
+++ b/app/views/customers/posts/_index.html.erb
@@ -1,20 +1,19 @@
                 <% @posts.each do |post| %>
                 <div class="col-8 pt-4 pb-4 mt-5 border rounded shadow bg-light">
                     
-                    <div class="col-12 d-flex">
+                    <div class="row">
                         <!--プロフィール画像-->
-                        <div class="col-2 "><%= render "customers/shared/image_attached", post: post %></div>
-                        
+                        <div class="col-md-3 col-sm-4"><%= render "customers/shared/image_attached", post: post %></div>
+                        <!-----投稿時間-------->
+                        <div class="col-md-4 col-sm-4"><%= l post.created_at, format: :short %></div>
                         <!--フォローボタン-->
                         <% if current_customer.id == post.customer.id %>
-                            <div class="col-2 offset-md-4"><i class="fas fa-user-check fa-3x"></i></div>
+                            <div class="col-md-2 col-sm-2 offset-md-2"><i class="fas fa-user-check fa-3x"></i></div>
                         <% else %>
-                            <div id="follow_<%= post.customer_id %>" class="col-5 offset-md-2"><%= render "customers/relationships/follow",customer: post.customer %></div>
+                            <div id="follow_<%= post.customer_id %>" class="col-md-5 col-sm-4"><%= render "customers/relationships/follow",customer: post.customer %></div>
                         <% end %>
                     </div>
-                    
-                        <div class="col-5 pl-4"><%= link_to post.customer.name ,customer_path(post.customer.id)%></div>
-                        
+                        <div class="col-12 p-3"><%= link_to post.customer.name ,customer_path(post.customer.id)%></div>
                         <!--タグ-->
                         <div class="p-2"><%= render 'customers/posts/tag_list', tag_list: post.tag_list %></div>
                         
@@ -25,16 +24,16 @@
                             <% end %>
                         </div>
                     
-                        <div class="col-12 text-break mt-3"><%= post.content %></div>
-                        
-                    <div class="col-12 d-flex bd-highlight pt-5">
-                          
-                          <div class="ml-3 bd-highlight">いいね: <%= post.favorites.count %></div>
-                          <div class=" ml-3 mr-1 bd-highlight">コメント:<%= post.post_comments.count %></div><!--コメント数-->
-                          <div><%= link_to "詳細",post_path(post.id)%></div>
+                        <div class="col-12 text-break mt-2"><%= post.content %></div>
+                    <div class="row pt-3 offset-md-7">
+                          <div class="mr-3 bd-highlight">いいね: <%= post.favorites.count %></div>
+                          <div class="bd-highlight">コメント:<%= post.post_comments.count %></div><!--コメント数-->
+                    </div>
+                    <div class="row col-md-12 justify-content-between pt-3">
+                          <div class="col-md-3"><%= link_to "詳細",post_path(post.id),class:"btn btn-info"%></div>
                           <!----削除ボタン------>
                           <% if current_customer.id == post.customer.id %>
-                              <div><%= link_to "削除",post_path(post.id) ,class:"btn btn-danger" ,method: :delete,remote: true %></div>
+                              <div class="col-md-3"><%= link_to "削除",post_path(post.id) ,class:"btn btn-danger" ,method: :delete,remote: true %></div>
                           <% end %>
                     </div>
                 </div>
