--- a/app/views/customers/posts/index.html.erb
+++ b/app/views/customers/posts/index.html.erb
@@ -13,10 +13,14 @@
             
             <div class="col-md-8 offset-md-1">
                 
+                <% if current_page?(posts_path) %>
                 <!---- 投稿一覧 ------->
                 <div id="index_">
                 <%= render "customers/posts/index" %>
                 </div>
+                <% else %>
+                <%= render "customers/posts/index" %>
+                <% end %>
                 
             </div>
         </div>
