--- a/app/views/customers/posts/show.html.erb
+++ b/app/views/customers/posts/show.html.erb
@@ -1,4 +1,4 @@
-<div class="container">  
+    <div class="container">  
         <div class="row">
             
              <div class="col-md-3 mt-5 p-4 border rounded h-50 shadow bg-light" >
@@ -11,56 +11,60 @@
                 
             </div>
             
-            <div class="col-md-6 p-3 mt-4 offset-md-1 shadow border rounded bg-light">
-                    <div class="col-8 d-flex">
-                        
-                        <div class="col-auto mr-5">
-                            <!--画像-->
+            <div class="col-md-6 p-3 mt-5 offset-md-1 shadow border rounded bg-light">
+                    <div class="row">
+                        <!--画像-->
+                        <div class="col-md-3 col-sm-4">
                             <%= render "customers/shared/image_attached", post: @post %>
                         </div>
+                        <!-----投稿時間-------->
+                        <div class="ml-2"><%= l @post.created_at, format: :short %></div>
                         
-                        <div class="col-auto offset-md-8">
-                            <!--フォローボタン-->
-                        <%= render "customers/relationships/follow",customer: @customer  %>
-                        </div>
                         
-                    </div>
-                    
-                    <div class="col-auto p-4">
-                        <div class="p-2 mt-2 text-break"><%= @post.content %></div>
-                        <!-------------投稿画像-------->
-                        <div>
-                            <% if @post.post_image.attached? %>
-                                <%= image_tag @post.post_image.variant(resize:'500x500') %>
-                            <% end %>
+                        <!--フォローボタン-->
+                        <% if current_customer.id == @post.customer.id %>
+                            <div class="col-md-2 col-sm-2 offset-md-4"><i class="fas fa-user-check fa-3x"></i></div>
+                        <% else %>
+                        <div class="col-md-4 offset-md-3">
+                            <%= render "customers/relationships/follow",customer: @customer  %>
                         </div>
-                         <!--------タグリスト----------->
-                        <div><%= render 'customers/posts/tag_list', tag_list: @post.tag_list %></div>
-                    </div>
+                        <% end %>
+                        
+                    </div>  
+                    <div class="p-3"><%= link_to @post.customer.name,@post.customer %></div>
                     
-                    <div class="col-auto d-flex offset-md-9 mt-5">              
-                        <!--いいねボタン-->
+                     <!--------タグリスト----------->
+                    <div><%= render 'customers/posts/tag_list', tag_list: @post.tag_list %></div>
+                    
+                    <!---------投稿画像-------->
+                    <div class="col-md-12">
+                        <% if @post.post_image.attached? %>
+                            <%= image_tag @post.post_image.variant(resize:'500x500') %>
+                        <% end %>
+                    </div>
+                        <div class="p-2 mt-4 mb-4 text-break"><%= @post.content %></div>
+                    
+                    <div class="row col-md-12 justify-content-end">
+                         <!--いいねボタン-->
                         <div id="favorite_hart_buttons_<%= @post.id %>">
                              <%= render 'customers/favorites/favorite', post: @post %>
                         </div>
-                        
-                        <div><%= link_to "編集", edit_post_path(@post.id),class:"btn btn-success" %></div>
+                        <% if current_customer.id == @post.customer.id %>
+                            <div class="ml-3"><%= link_to "編集", edit_post_path(@post.id),class:"btn btn-success" %></div>
+                        <% end %>
                     </div>
 
                     <!--コメントフォーム-->
-                    <div class="ml-5 mt-5">
+                    <div class="col-md-12 mt-3">
                         <%= render "customers/post_comments/post_comment" %>
                     </div>
                     
                     <!--- コメント一覧・削除 --->
-                    <div class="ml-5">
-                    <div id="comment_list_">
-                        <%= render "customers/post_comments/comments_index" %>
+                    <div class="col-md-12">
+                        <div id="comment_list_">
+                            <%= render "customers/post_comments/comments_index" %>
+                        </div>
                     </div>
-                    </div>
-
-             
- 
             </div>
         </div>
     </div>
