--- a/app/views/customers/relationships/followers.html.erb
+++ b/app/views/customers/relationships/followers.html.erb
@@ -2,7 +2,7 @@
 <div class="container">
   <div class="row">
     <div class="col-md-8 border bg-light shadow offset-md-2 mt-4">
-      <h1 class="display-6 text-danger">Followers</h1>
+      <h2><strong><%= @customer.name %></strong> のFollowers</h2>
       <table class='table'>
         <thead>
           <tr>
