--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,6 @@
 <header>
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
-       <a class="navbar-brand" href="/"><%= image_tag asset_path('muscle_icon.jpeg') %></a>
+       <a class="navbar-brand" href="/"><i class="fas fa-home"></i></a>
        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav4" aria-controls="navbarNav4" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
