--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,7 +7,10 @@
         <div class="collapse navbar-collapse justify-content-end" id="navbarNav4">
             <ul class="navbar-nav">
             <% if customer_signed_in? %>
-                
+            
+                <li class="ml-4 mr-4"><%= link_to maps_path, class:"nav-link  active btn-block" do %>
+                    <i class="fas fa-dumbbell"> ジムを探す</i>
+                <% end %></li>
                 
                 <li class="ml-4 mr-4"><%= link_to customers_path, class:"nav-link  active btn-block" do %>
                     <i class="fas fa-users"> トレーニー</i>
@@ -40,10 +43,6 @@
             
             <% else %>
             
-                <li><%= link_to "/about", class:"nav-link  active btn-block" do %>
-                    <i class="fas fa-link"> FitnessBoosterとは</i>
-                <% end %></li>
-                
                 <li><%= link_to " /customers/sign_up", class:"nav-link  active btn-block" do %>
                     <i class="fas fa-user-plus"> アカウント作成</i>
                 <% end %></li>
