--- a/app/views/customers/posts/_index.html.erb
+++ b/app/views/customers/posts/_index.html.erb
@@ -24,7 +24,7 @@
                             <% end %>
                         </div>
                        
-                        <span class="sentiment-score">感情分析スコア: <strong><%= post.score %></strong>点</span>
+                        <div class="sentiment-score p-2">感情分析スコア: <strong><%= post.score %></strong>点</div>
                     
                         <div class="col-12 text-break mt-2"><%= post.content %></div>
                     <div class="row pt-3 offset-md-7">
