--- a/app/views/customers/shared/_error_messages.html.erb
+++ b/app/views/customers/shared/_error_messages.html.erb
@@ -1,11 +1,11 @@
 
-<% if resource.errors.any? %>
+<% if model.errors.any? %>
   <div id="error_explanation">
     <div class="alert alert-danger">
       The form contains <%= pluralize(resource.errors.count, "error") %>.
     </div>
     <ul>
-    <% resource.errors.full_messages.each do |msg| %>
+    <% model.errors.full_messages.each do |msg| %>
       <li><%= msg %></li>
     <% end %>
     </ul>
