--- a/app/views/customers/shared/_error_messages.html.erb
+++ b/app/views/customers/shared/_error_messages.html.erb
@@ -1,12 +1,10 @@
 
 <% if model.errors.any? %>
   <div id="error_explanation">
-    <div class="alert alert-danger">
-      The form contains <%= pluralize(resource.errors.count, "error") %>.
-    </div>
+    
     <ul>
     <% model.errors.full_messages.each do |msg| %>
-      <li><%= msg %></li>
+      <p><%= msg %></p>
     <% end %>
     </ul>
   </div>
