--- a/app/views/customers/customers/edit.html.erb
+++ b/app/views/customers/customers/edit.html.erb
@@ -7,7 +7,8 @@
       <h2>編集ページ</h2>
       </div>
           <%= form_with model:@customer ,local:true do |f| %>
-           
+          <%= render "customers/shared/error_messages",  model: @customer %>
+          
             <div class="form-group">
               <%= f.label :名前 %>
               <%= f.text_field :name, class: "form-control name" %>
