--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -52,9 +52,17 @@ body{
 
 #error_explanation {
   color: red;
-  ul {
-    color: red;
-    margin: 0 0 30px 0;
-  }
+  margin: 0 auto;
+  width:270px;
+  text-align: left;
+  padding-left: 40px;
+  
 }
 
+/*flash*/
+
+.notice{
+  color:green;
+  text-align:center;
+  font-size:25px;
+}
