--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,9 @@
   <body>
     
     <%= render "layouts/header" %>
+    <div class="notice">
+      <%= flash[:notice] %>
+    </div>
     <%= yield %>
   </body>
 </html>
