relationships_layout update

--- a/app/views/customers/post_comments/create.js.erb
+++ b/app/views/customers/post_comments/create.js.erb
@@ -1,2 +1,3 @@
 $("#comment_list_").html("<%= j (render 'customers/post_comments/comments_index') %>");
 $("textarea").val(''); <!-------コメントフォームを空にする------->
+location.hash = "comment_<%= @post_comment.id %>"
