--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -62,7 +62,8 @@ body{
 /*flash*/
 
 .notice{
-  color:green;
+  color:#155724;
   text-align:center;
-  font-size:25px;
+  font-size:20px;
+  background-color:#d4edda;
 }
