--- a/app/views/customers/post_comments/_comments_index.html.erb
+++ b/app/views/customers/post_comments/_comments_index.html.erb
@@ -1,6 +1,6 @@
 <div class="col-md-12 pt-3"> コメント一覧</div>
     <% @post_comments.each do |comment| %>
-         <div class="col-md-12 col-sm-12 p-3">
+         <div class="col-md-12 col-sm-12 p-3" id="comment_<%= comment.id %>">
             <div class="row">
                 <div class="col-md-3">
                     <% if comment.customer.image.attached? %>
