--- a/app/views/customers/posts/_form.html.erb
+++ b/app/views/customers/posts/_form.html.erb
@@ -1,4 +1,4 @@
-    <%= form_with model:post , data: {remote: true} do  |f| %>
+    <%= form_with model:post ,  local:true  do  |f| %>
     <%= render "customers/shared/error_messages",  model: f.object %>
     
         <div class="field">
@@ -21,13 +21,3 @@
         </div>
     <% end %>
     
-
-        <script>
-          $('#image').on('change', function (e) {
-            var reader = new FileReader();
-            reader.onload = function (e) {
-                $("#preview").attr('src', e.target.result);
-            }
-            reader.readAsDataURL(e.target.files[0]);
-        });
-        </script>
