--- a/app/views/customers/relationships/followings.html.erb
+++ b/app/views/customers/relationships/followings.html.erb
@@ -2,7 +2,7 @@
 <div class="container">
   <div class="row">
     <div class="col-md-8 border bg-light shadow offset-md-2 mt-4">
-      <h2><strong><%= @customer.name %></strong> のFollowing</h2>
+      <h2><strong><%= @customer.name %></strong> のフォローユーザー</h2>
       <table class='table'>
         <thead>
           <tr>
