--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -34,6 +34,14 @@ body{
   color:#df5656;
 }
 
+/*----------ページネーション-----------*/
+
+
+.paginate{
+  width:100%;
+  
+}
+
 .pagination>li>a {          
   border: none;     
   color: #696969;   
