--- a/app/views/customers/posts/index.html.erb
+++ b/app/views/customers/posts/index.html.erb
@@ -18,9 +18,11 @@
                 <%= render "customers/posts/index" %>
                 </div>
                 
-                <div class="col-md-12 offset-md-1 mt-3 mb-3"><%= paginate @posts %></div>
+                
             </div>
             
         </div>
+        <div class="col-md-12 offset-md-4 mt-3 mb-3 paginate"><%= paginate @posts %></div>
     </div>
+    
 </div>
