--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,9 +14,13 @@
   <body>
     
     <%= render "layouts/header" %>
+    <%= yield %>
+    <div class="alert">
+      <%= flash[:alert] %>
+    </div>
     <div class="notice">
       <%= flash[:notice] %>
     </div>
-    <%= yield %>
+    
   </body>
 </html>
