serch_layout change

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -30,7 +30,7 @@ body{
 .like{
   color:#df5656;
 }
-
+/*----------ヘッダー-----------*/
 .navbar{
   background-color:#ef857d;
 }
@@ -56,7 +56,7 @@ body{
   border-radius: 15px;   
 }
 
-/*error*/
+/*--------error----------*/
 
 #error_explanation {
   color: red;
@@ -67,7 +67,7 @@ body{
   
 }
 
-/*flash*/
+/*--------flash------------*/
 
 .notice{
   color:#155724;
