--- a/app/views/customers/posts/_index.html.erb
+++ b/app/views/customers/posts/_index.html.erb
@@ -1,5 +1,5 @@
                 <% @posts.each do |post| %>
-                <div class="col-8 pt-4 pb-4 mt-5 border rounded shadow bg-light">
+                <div class="col-8 pt-4 pb-4 mt-5 border rounded shadow bg-white">
                     
                     <div class="row">
                         <!--プロフィール画像-->
