--- a/app/views/customers/posts/index.html.erb
+++ b/app/views/customers/posts/index.html.erb
@@ -1,7 +1,7 @@
 <div id="posts_index">    
     <div class="container">  
         <div class="row">
-            <div class="col-md-3 p-4 mt-5 border rounded shadow h-50 bg-light" >
+            <div class="col-md-3 p-4 mt-5 border rounded shadow h-50 bg-white" >
                 
                 <!--ユーザーサイドバー-->
                 <%= render 'customers/customers/info' , post: current_customer, customer: current_customer %>
