--- a/app/views/customers/posts/_form.html.erb
+++ b/app/views/customers/posts/_form.html.erb
@@ -14,7 +14,7 @@
         <label for="image">
              <span class="button">画像を選択</span><%= f.file_field  :post_image, id: "image" %>
         </label>
-        <img id="preview" style="width:100%;">
+        <img id="preview">
         
         <div class="form-group pt-4">
             <input type="submit" value"送信する" name="commit" class="button-form">
