comment_index update

--- a/app/assets/stylesheets/customers/post_comments.scss
+++ b/app/assets/stylesheets/customers/post_comments.scss
@@ -16,3 +16,9 @@
   box-shadow    : none;        
   opacity       : 1;           
 }
+
+.comment_index{
+  padding:15px;
+  border:solid 1px #dcdcdc;
+  border-radius:5px;
+}
